# bggstats

./: .gitignore  LICENSE  Pipfile  README.md  bggthread.py  fetchdata.py  guild_reports.py  pyproject.toml  reports.py
